tests/NormalTests/paczka1/fuzzy1/25170477.err
Error in line 2: ZYDuTK3AWR S948 16,9
Error in line 4: v5RG A482 77,9
Error in line 15: A482 S948 21,2
Error in line 18: A482 S956 41,7
Error in line 28: A482 A482 52,6
